Bug 128241 - Crash when opening print dialog (gtk3 only)
Summary: Crash when opening print dialog (gtk3 only)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.4.0
Keywords: haveBacktrace
Depends on:
Blocks:
 
Reported: 2019-10-18 21:33 UTC by Julien Nabet
Modified: 2019-10-21 10:52 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with debug symbols (5.08 KB, text/plain)
2019-10-18 21:34 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Julien Nabet 2019-10-18 21:33:36 UTC
Description:
On pc Debian x86-64 with master sources updated today + enable-dbgutil + gtk3, I got a crash when trying to open print dialog.

Steps to Reproduce:
1. Launch Calc or Writer (without any specific file for arg)
2. Click Print dialog


Actual Results:
Crash

Expected Results:
No crash


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Comment 1 Julien Nabet 2019-10-18 21:34:08 UTC
Created attachment 155131 [details]
bt with debug symbols
Comment 2 Julien Nabet 2019-10-18 21:34:59 UTC
Caolán: since it concerns gtk3 only, thought you might be interested in this one. (bt is attached on the bugtracker)
Comment 3 Caolán McNamara 2019-10-19 16:13:02 UTC
gtk_notebook_set_tab_label_text seems to remove the existing label widget and add a new one, rather than just change the label of the existing one so the new one has no buildable name set
Comment 4 Commit Notification 2019-10-19 16:30:01 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5ed218d4ec26042f87b64a59c60373f35de962a7

tdf#128241: fix crash when opening print dialog (gtk3 only)

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2019-10-19 19:07:31 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/feb21e498afa8d6fd12a82fb56a2456b2db83e24

Resolves: tdf#128241 reuse label to retain buildable_name

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2019-10-21 10:52:39 UTC
Verified in

Version: 6.4.0.0.alpha1+
Build ID: de4839e66d3d195315729b95cc144cdab96b6e74
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Julien Nabet, thanks for fixing this issue!