tdf#128241: fix crash when opening print dialog (gtk3 only)

See bt here:
https://bugs.documentfoundation.org/attachment.cgi?id=155131

Change-Id: Ibd220f6f41b6cee6217465c534fac1af4bb2b51b
Reviewed-on: https://gerrit.libreoffice.org/81123
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>